--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2>Contact Me</h2>
             <p>If you’d like to work together or have any questions, feel free to reach out!</p>
             <ul class="contact-info">
-                <li>Email: myemail@example.com</li>
+                <li>Email: alka.rathod94@gmail.com</li>
                 <li>Freelancer Profile: <a href="#">View My Profile</a></li>
             </ul>
         </div>
